style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');

:root {
	--main-font: 'Open Sans', san-serif;
	--nav-background: #343433;
}

* {
    margin: 0px;
    box-sizing: border-box;
}

body {
	background-color: #e9e9e9;
	font-family: var(--main-font);
}

nav {
    position: fixed;
    width: 100vw; 
	display: flex;
	justify-content: space-around;
	padding: 1em 2em 1em 2em;
	background-color: var(--nav-background);
	color: white;
	box-shadow: 0px 0px 5px black;
}

h3, h4 {
	color: white;
}

p {
	margin: 1em 0em 1em 0em;
}

.section {
	padding: 5em;
	background-color: burlywood;
}

.section:nth-child(odd) {
	background: var(--nav-background);
	color: white;
}

.section:nth-child(even) {
	background: burlywood;
}

.section__hero {
	display: flex;
	align-items: center;
	justify-content: center;
	height: 80vh;
}

.section-content__flex {
	display: flex;
	justify-content: space-around;
}

.section-content {
	margin: 0em 5em 0em 5em;
}

.logo-image {
	width: 500px
}

.profile-card {
	background: white;
	box-shadow: 1px 1px 5px black;
	border-radius: 10px;
	margin-top: 2em;
	margin-bottom: 2em;
	position: relative;
}

.profile-card__header {
	background: #142449;
	height: 150px;
	border-radius: 10px 10px 0px 0px;
	display: flex;
	justify-content: flex-end;
	align-items: baseline; 
}

.profile-card__content {
	min-height: 300px;
}

.profile-image {
	position: absolute;
	border: 6px solid white;
    /* box-shadow: 4px 1px 15px black; */
	border-radius: 100%;
	width: 200px;
	max-height: 200px;
	margin: 1em;
	top: 35px;
	left: 30px
}

#world-premeire > p {
	margin: none;
}

